task-3-istio-zero-trust/manifests/50-istio-ingress-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: ledger-gateway
  namespace: ledger
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-ledger
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ledger-api-tls
      hosts:
        - ledger.local
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ledger-api
  namespace: ledger
spec:
  hosts:
    - ledger.local
  gateways:
    - ledger-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: ledger-api.ledger.svc.cluster.local
            port:
              number: 8080
