task-3-istio-zero-trust/manifests/40-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ledger-default-deny-ingress-egress
  namespace: ledger
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ledger-api-ingress-from-neighbour-and-gateway
  namespace: ledger
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ledger-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ledger-neighbour
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
          podSelector:
            matchLabels:
              app: istio-ingressgateway
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 15006
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-neighbour-ingress-from-ledger-api
  namespace: ledger
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ledger-neighbour
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ledger-api
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 15006
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ledger-egress-required
  namespace: ledger
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - protocol: TCP
          port: 15012
        - protocol: TCP
          port: 15017
        - protocol: TCP
          port: 443
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ledger-api
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ledger-neighbour
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 15006
